SALLMA/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controller-svc
spec:
  selector:
    app: controller
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
